--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8" />
         <!-- <link rel="stylesheet" href="./css/nav.css" type="text/css"> -->
-        <link rel="stylesheet" href="./css/mainlayout.css" type="text/css">
+        <!-- <link rel="stylesheet" href="./css/mainlayout.css" type="text/css" -->
         <title>React App</title>
     </head>
     <body>
